--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8"></meta>
         <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <a href="index.html">
+    <a href="webview.html">
         <button>Model</button>
         </a>
     <head>
